--- a/Notebooks/Preprocessing.ipynb
+++ b/Notebooks/Preprocessing.ipynb
@@ -31,7 +31,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import scipy.spatial"
    ]
   },
   {
@@ -48,12 +49,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
+    "stationDF = pd.read_csv('../CSVs/station.csv')\n",
     "trainingSet = pd.read_csv('../CSVs/trip_train.csv')"
    ]
   },
@@ -64,7 +66,87 @@
     "editable": true
    },
    "source": [
-    "### Basic data analysis"
+    "## Basic data analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "stationDF.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print \"stationDF.shape: \", stationDF.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "distancesDF = pd.DataFrame(columns=[\"station1\", \"station2\", \"distance\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "scipy.spatial.distance_matrix([scipy.spatial.distance.cityblock(stationDF.lat, stationDF.long), 70], \\\n",
+    "                              [scipy.spatial.distance.cityblock(stationDF.lat, stationDF.long), 70])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for station, lat, lon in zip(stationDF.id, stationDF.lat, stationDF.long):\n",
+    "    for station2, lat2, lon2 in zip(stationDF.id, stationDF.lat, stationDF.long):\n",
+    "        distancesDF = distancesDF.append({\n",
+    "            \"station1\": station,\n",
+    "            \"station2\": station2,\n",
+    "            \"distance\": scipy.spatial.distance.cityblock([lat, lon], [lat2, lon2])\n",
+    "        }, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "distancesDF.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training set"
    ]
   },
   {
@@ -257,6 +339,13 @@
    "outputs": [],
    "source": [
     "trainingSet.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save processed data"
    ]
   },
   {
