linear regression analysis done. Final csv has to yet be created.

--- a/Notebooks/Some Analysis.ipynb
+++ b/Notebooks/Some Analysis.ipynb
@@ -25,6 +25,8 @@
     "# import ML packages\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.datasets import make_blobs\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import preprocessing\n",
     "\n",
     "# import Plotting pckgs\n",
     "from matplotlib import pyplot as plt\n",
@@ -69,72 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "trainingSet['start_date'] = pd.to_datetime(trainingSet.start_date)\n",
-    "trainingSet['start_time'] = pd.to_datetime(trainingSet.start_time)\n",
-    "\n",
-    "trainingSet['end_date'] = pd.to_datetime(trainingSet.end_date)\n",
-    "trainingSet['end_time'] = pd.to_datetime(trainingSet.end_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
     "trainingSet.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Initialize the model with 2 parameters -- number of clusters and random state.\n",
-    "kmeans_model = KMeans()\n",
-    "# kmeans_model = KMeans(n_clusters=5, random_state=1)\n",
-    "# Get only the numeric columns from games.\n",
-    "good_columns = trainingSet._get_numeric_data()\n",
-    "# good_columns\n",
-    "\n",
-    "# Fit the model using the good columns.\n",
-    "kmeans_model.fit(good_columns)\n",
-    "# Get the cluster assignments.\n",
-    "labels = kmeans_model.labels_"
    ]
   },
   {
@@ -145,22 +82,26 @@
    },
    "outputs": [],
    "source": [
-    "# Import the PCA model.\n",
-    "from sklearn.decomposition import PCA\n",
-    "\n",
-    "# Create a PCA model.\n",
-    "pca_2 = PCA(2)\n",
-    "# Fit the PCA model on the numeric columns from earlier.\n",
-    "plot_columns = pca_2.fit_transform(good_columns)\n",
-    "# Make a scatter plot of each game, shaded according to cluster assignment.\n",
-    "plt.scatter(x=plot_columns[:,0], y=plot_columns[:,1], c=labels)\n",
-    "# Show the plot.\n",
-    "plt.show()"
+    "testingSet.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.duration.mean()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Let's study correlation between data"
    ]
@@ -169,7 +110,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -178,7 +121,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "We can see that the duration is most correlated with:\n",
     "    - start_dayOfWeek     0.018351\n",
@@ -191,7 +137,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -203,7 +151,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -218,12 +168,8 @@
    },
    "outputs": [],
    "source": [
-    "# Filter the columns to remove ones we don't want.\n",
-    "columns = [c for c in columns if c not in [\"start_date\", \"start_time\", \"start_station_name\",\\\n",
-    "                                           \"end_date\", \"end_time\", \"end_station_name\", \"subscription_type\", \"zip_code\"]]\n",
-    "\n",
-    "# Store the variable we'll be predicting on.\n",
-    "target = \"duration\""
+    "# Create linear regression object\n",
+    "regr = linear_model.LinearRegression()"
    ]
   },
   {
@@ -234,16 +180,7 @@
    },
    "outputs": [],
    "source": [
-    "# Import a convenience function to split the sets.\n",
-    "from sklearn.cross_validation import train_test_split\n",
-    "\n",
-    "# Generate the training set.  Set random_state to be able to replicate results.\n",
-    "train = trainingSet.sample(frac=0.8, random_state=1)\n",
-    "# Select anything not in the training set and put it in the testing set.\n",
-    "test = trainingSet.loc[~trainingSet.index.isin(train.index)]\n",
-    "# Print the shapes of both sets.\n",
-    "print(train.shape)\n",
-    "print(test.shape)"
+    "trainingSet.shape"
    ]
   },
   {
@@ -254,13 +191,19 @@
    },
    "outputs": [],
    "source": [
-    "# Import the linearregression model.\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "# Initialize the model class.\n",
-    "model = LinearRegression()\n",
-    "# Fit the model to the training data.\n",
-    "model.fit(train[columns], train[target])"
+    "# Train the model using the training sets\n",
+    "regr.fit(trainingSet[['start_dayOfWeek', 'end_dayOfWeek', 'end_hour', 'start_station_id']], trainingSet.duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "prediction = regr.predict(testingSet[['start_dayOfWeek', 'end_dayOfWeek', 'end_hour', 'start_station_id']])"
    ]
   },
   {
@@ -271,14 +214,7 @@
    },
    "outputs": [],
    "source": [
-    "# Import the scikit-learn function to compute error.\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "# Generate our predictions for the test set.\n",
-    "predictions = model.predict(test[columns])\n",
-    "\n",
-    "# Compute error between our test predictions and the actual values.\n",
-    "mean_squared_error(predictions, test[target])"
+    "prediction"
    ]
   }
  ],
