--- a/Notebooks/Preprocessing.ipynb
+++ b/Notebooks/Preprocessing.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -56,7 +56,8 @@
    "outputs": [],
    "source": [
     "stationDF = pd.read_csv('../CSVs/station.csv')\n",
-    "trainingSet = pd.read_csv('../CSVs/trip_train.csv')"
+    "trainingSet = pd.read_csv('../CSVs/trip_train.csv')\n",
+    "testingSet = pd.read_csv('../CSVs/trip_test.csv')"
    ]
   },
   {
@@ -71,29 +72,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>dock_count</th>\n",
+       "      <th>city</th>\n",
+       "      <th>installation_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>San Jose Diridon Caltrain Station</td>\n",
+       "      <td>37.329732</td>\n",
+       "      <td>-121.901782</td>\n",
+       "      <td>27</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>8/6/2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>San Jose Civic Center</td>\n",
+       "      <td>37.330698</td>\n",
+       "      <td>-121.888979</td>\n",
+       "      <td>15</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>8/5/2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Santa Clara at Almaden</td>\n",
+       "      <td>37.333988</td>\n",
+       "      <td>-121.894902</td>\n",
+       "      <td>11</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>8/6/2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Adobe on Almaden</td>\n",
+       "      <td>37.331415</td>\n",
+       "      <td>-121.893200</td>\n",
+       "      <td>19</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>8/5/2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>San Pedro Square</td>\n",
+       "      <td>37.336721</td>\n",
+       "      <td>-121.894074</td>\n",
+       "      <td>15</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>8/7/2013</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                               name        lat        long  dock_count  \\\n",
+       "0   2  San Jose Diridon Caltrain Station  37.329732 -121.901782          27   \n",
+       "1   3              San Jose Civic Center  37.330698 -121.888979          15   \n",
+       "2   4             Santa Clara at Almaden  37.333988 -121.894902          11   \n",
+       "3   5                   Adobe on Almaden  37.331415 -121.893200          19   \n",
+       "4   6                   San Pedro Square  37.336721 -121.894074          15   \n",
+       "\n",
+       "       city installation_date  \n",
+       "0  San Jose          8/6/2013  \n",
+       "1  San Jose          8/5/2013  \n",
+       "2  San Jose          8/6/2013  \n",
+       "3  San Jose          8/5/2013  \n",
+       "4  San Jose          8/7/2013  "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stationDF.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stationDF.shape:  (70, 7)\n"
+     ]
+    }
+   ],
    "source": [
     "print \"stationDF.shape: \", stationDF.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -104,11 +206,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "need more than 1 value to unpack",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-67-a5e344c8b356>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspatial\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspatial\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcityblock\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstationDF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstationDF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m70\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m                               \u001b[0;34m[\u001b[0m\u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspatial\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcityblock\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstationDF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstationDF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m70\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/lib/python2.7/dist-packages/scipy/spatial/kdtree.pyc\u001b[0m in \u001b[0;36mdistance_matrix\u001b[0;34m(x, y, p, threshold)\u001b[0m\n\u001b[1;32m    963\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    964\u001b[0m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 965\u001b[0;31m     \u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    966\u001b[0m     \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    967\u001b[0m     \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: need more than 1 value to unpack"
+     ]
+    }
+   ],
    "source": [
     "scipy.spatial.distance_matrix([scipy.spatial.distance.cityblock(stationDF.lat, stationDF.long), 70], \\\n",
     "                              [scipy.spatial.distance.cityblock(stationDF.lat, stationDF.long), 70])"
@@ -215,6 +330,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "testingSet['start_date'] = pd.to_datetime(testingSet.start_date)\n",
+    "testingSet['end_date'] = pd.to_datetime(testingSet.end_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false,
@@ -255,6 +385,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "testingSet['start_dayOfWeek'] = testingSet.start_date.dt.dayofweek\n",
+    "testingSet['start_week'] = testingSet.start_date.dt.week\n",
+    "testingSet['start_quarter'] = testingSet.start_date.dt.quarter\n",
+    "testingSet['start_time'] = testingSet.start_date.dt.time\n",
+    "testingSet['start_hour'] = testingSet.start_date.dt.hour\n",
+    "testingSet['start_minute'] = testingSet.start_date.dt.minute\n",
+    "testingSet['start_date'] = testingSet.start_date.dt.date\n",
+    "\n",
+    "testingSet['end_dayOfWeek'] = testingSet.end_date.dt.dayofweek\n",
+    "testingSet['end_week'] = testingSet.end_date.dt.week\n",
+    "testingSet['end_quarter'] =testingSet.end_date.dt.quarter\n",
+    "testingSet['end_time'] = testingSet.end_date.dt.time\n",
+    "testingSet['end_hour'] = testingSet.end_date.dt.hour\n",
+    "testingSet['end_minute'] = testingSet.end_date.dt.minute\n",
+    "testingSet['end_date'] = testingSet.end_date.dt.date"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false,
@@ -291,6 +448,83 @@
    "source": [
     "trainingSet = trainingSet[['id', \n",
     "                           'duration', \n",
+    "                           'start_date',\n",
+    "                           'start_dayOfWeek',\n",
+    "                           'start_week',\n",
+    "                           'start_quarter', \n",
+    "                           'start_time',\n",
+    "                           'start_hour',\n",
+    "                           'start_minute',\n",
+    "                           'start_station_name', \n",
+    "                           'start_station_id', \n",
+    "                           'end_date', \n",
+    "                           'end_dayOfWeek',\n",
+    "                           'end_week',\n",
+    "                           'end_quarter', \n",
+    "                           'end_time',\n",
+    "                           'end_hour',\n",
+    "                           'end_minute',\n",
+    "                           'end_station_name', \n",
+    "                           'end_station_id', \n",
+    "                           'bike_id',\n",
+    "                           'subscription_type',\n",
+    "                           'zip_code']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id',\n",
+       " 'start_date',\n",
+       " 'start_station_name',\n",
+       " 'start_station_id',\n",
+       " 'end_date',\n",
+       " 'end_station_name',\n",
+       " 'end_station_id',\n",
+       " 'bike_id',\n",
+       " 'subscription_type',\n",
+       " 'zip_code',\n",
+       " 'start_dayOfWeek',\n",
+       " 'start_week',\n",
+       " 'start_quarter',\n",
+       " 'start_time',\n",
+       " 'start_hour',\n",
+       " 'start_minute',\n",
+       " 'end_dayOfWeek',\n",
+       " 'end_week',\n",
+       " 'end_quarter',\n",
+       " 'end_time',\n",
+       " 'end_hour',\n",
+       " 'end_minute']"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(testingSet.columns.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "testingSet = testingSet[['id', \n",
     "                           'start_date',\n",
     "                           'start_dayOfWeek',\n",
     "                           'start_week',\n",
